style: fix formatting and spacing in about-me.component.scss

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -24,7 +24,7 @@
   top: 0;
   left: 0;
 
-  > img {
+  >img {
     position: relative;
     width: 568px;
     height: 568px;
@@ -171,7 +171,7 @@
 
   .background-moved {
     top: 24px;
-    left: -37px; 
+    left: -37px;
   }
 }
 
@@ -278,7 +278,7 @@
     top: 19px;
     left: calc(50% - 203px) !important;
   }
-  
+
 
   .profil-img .background-hover {
     left: calc(50% - 175px);
@@ -330,9 +330,9 @@
     top: 25px;
     left: -25px !important;
   }
-  
+
   .profil-img .background-hover {
-    width: 100%;
+    left: 0;
     height: 460px;
   }
 }
@@ -373,7 +373,7 @@
     top: 15px;
     left: -15px;
   }
-  
+
   .profil-img .background-hover {
     width: 100%;
     height: 280px;
